--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://GShiva8523.github.io/Mediawebsite3.git",
+  "homepage":"https://shiva8523.github.io/Mediawebsite3.git",
   "name": "serverwitharruseeffeusestate",
   "version": "0.1.0",
   "private": true,
